...
                      ),
                    ],
                  ),
                ),
              ),
              _buildInfoSection(),
              _buildGridViewSection('Available Programs'),
            ],
          ),
        ),
      ),
    );
  }
...
